--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a3356822",
    "metadata": {},
    "outputs": [
@@ -306,12 +306,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<string>:21: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "<>:21: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "<string>:21: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "<>:21: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_28244\\980491712.py:21: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "  shutil.copy(files, f'cities\\{country}')\n"
+      "<string>:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<string>:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_31764\\2794030036.py:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "  shutil.move(files, f'cities\\{country}')\n",
+      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_31764\\2794030036.py:12: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "  shutil.move(files, f'cities\\{country}')\n"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Destination path 'cities\\Cairo\\01-02_cairo.txt' already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mError\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m country_directories = glob.glob(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mos-collaboration-exercise-data/*\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m.lower(country)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.txt\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m files \u001b[38;5;129;01min\u001b[39;00m country_directories:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[43mshutil\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcities\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcountry\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mohit\\miniconda3\\Lib\\shutil.py:854\u001b[39m, in \u001b[36mmove\u001b[39m\u001b[34m(src, dst, copy_function)\u001b[39m\n\u001b[32m    851\u001b[39m     real_dst = os.path.join(dst, _basename(src))\n\u001b[32m    853\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m os.path.exists(real_dst):\n\u001b[32m--> \u001b[39m\u001b[32m854\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m Error(\u001b[33m\"\u001b[39m\u001b[33mDestination path \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m already exists\u001b[39m\u001b[33m\"\u001b[39m % real_dst)\n\u001b[32m    855\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    856\u001b[39m     os.rename(src, real_dst)\n",
+      "\u001b[31mError\u001b[39m: Destination path 'cities\\Cairo\\01-02_cairo.txt' already exists"
      ]
     }
    ],
@@ -327,7 +341,7 @@
     "for country in countries:\n",
     "    country_directories = glob.glob(f'os-collaboration-exercise-data/*{str.lower(country)}.txt')\n",
     "    for files in country_directories:\n",
-    "        shutil.copy(files, f'cities\\{country}')\n"
+    "        shutil.move(files, f'cities\\{country}')\n"
    ]
   }
  ],
