--- a/7.2_plotting__exercises/plotting_(need)_exercises.ipynb
+++ b/7.2_plotting__exercises/plotting_(need)_exercises.ipynb
@@ -66,16 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ad9ebe7e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to function call (1147807458.py, line 4)",
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfor int(i) in range(x):\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m cannot assign to function call\n"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m x = np.linspace(\u001b[32m0\u001b[39m,\u001b[32m50\u001b[39m,\u001b[32m1000\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m      5\u001b[39m     y_next = (((np.e)**(-x/\u001b[32m10\u001b[39m))*np.sin(x))\n\u001b[32m      6\u001b[39m     y_next = y_next_float\n",
+      "\u001b[31mTypeError\u001b[39m: only integer scalar arrays can be converted to a scalar index"
      ]
     }
    ],
